tests/baselines/reference/jsDeclarationsClassLikeHeuristic(target=es2015).errors.txt
index.js(4,3): error TS2339: Property 'prototype' does not exist on type '{}'.


==== index.js (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/35801
    let A;
    A = {};
    A.prototype.b = {};
      ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type '{}'.